fix(layout): prevent body height lock and stretch sidebar

--- a/app/app.css
+++ b/app/app.css
@@ -22,7 +22,7 @@ code {
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   line-height: 1.5;
   color: #121212;
@@ -74,12 +74,15 @@ form[action$="destroy"] button {
 
 body {
   display: flex;
+  height: auto;
   min-height: 100vh;
+  align-items: stretch;
   width: 100%;
 }
 
 #sidebar {
   width: 22rem;
+  align-self: stretch;
   min-height: 100vh;
   background-color: #f7f7f7;
   border-right: solid 1px #e3e3e3;
